--- a/app/src/main/res/layout/activity_main2.xml
+++ b/app/src/main/res/layout/activity_main2.xml
@@ -14,6 +14,9 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="Enter"
+        android:minEms="1"
+        android:maxEms="3"
+        android:inputType="number"
         android:textAlignment="center"
         />
 
